Auto git update December 2021 - tony

--- a/Validate/1_validate_mosaic_stuff_months.ipynb
+++ b/Validate/1_validate_mosaic_stuff_months.ipynb
@@ -412,11 +412,21 @@
       "s3.Bucket(name='ws-enduser') bucket object count =  220000\n",
       "s3.Bucket(name='ws-enduser') bucket object count =  221000\n",
       "s3.Bucket(name='ws-enduser') bucket object count =  222000\n",
-      "COUNT= 222985\n",
-      "STANDARD 222985\n",
-      "STANDARD 22572500414501\n",
-      "STANDARD GBYTES= 21022.279201542027\n",
-      "STANDARD Cost/Month= 483.51242163546664\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  223000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  224000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  225000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  226000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  227000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  228000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  229000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  230000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  231000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  232000\n",
+      "COUNT= 232657\n",
+      "STANDARD 232657\n",
+      "STANDARD 22939054041429\n",
+      "STANDARD GBYTES= 21363.658869107254\n",
+      "STANDARD Cost/Month= 491.36415398946684\n",
       "----------------------------------------------------------------------------------------------------\n",
       "GLACIER 0\n",
       "GLACIER 0\n",
@@ -429,7 +439,7 @@
       "INTELLIGENT_TIERING Cost/Month= 0.0\n",
       "----------------------------------------------------------------------------------------------------\n",
       "END LOOP\n",
-      "G: 21022.279201542027 483.51242163546664\n"
+      "G: 21363.658869107254 491.36415398946684\n"
      ]
     }
    ],
@@ -589,7 +599,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>222980</th>\n",
+       "      <th>232652</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -598,7 +608,7 @@
        "      <td>1295984</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>222981</th>\n",
+       "      <th>232653</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -607,7 +617,7 @@
        "      <td>1108483</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>222982</th>\n",
+       "      <th>232654</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -616,7 +626,7 @@
        "      <td>10106845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>222983</th>\n",
+       "      <th>232655</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -625,7 +635,7 @@
        "      <td>16757676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>222984</th>\n",
+       "      <th>232656</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -635,7 +645,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>222985 rows × 6 columns</p>\n",
+       "<p>232657 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -646,13 +656,13 @@
        "3       ws-enduser   CONUS  r37.0_tile0  1999   dd_199904.tif   7873466\n",
        "4       ws-enduser   CONUS  r37.0_tile0  1999   dd_199905.tif   2429679\n",
        "...            ...     ...          ...   ...             ...       ...\n",
-       "222980  ws-enduser   CONUS  r50.0_tile9  2020  srf_202008.tif   1295984\n",
-       "222981  ws-enduser   CONUS  r50.0_tile9  2020  srf_202009.tif   1108483\n",
-       "222982  ws-enduser   CONUS  r50.0_tile9  2020  srf_202010.tif  10106845\n",
-       "222983  ws-enduser   CONUS  r50.0_tile9  2020  srf_202011.tif  16757676\n",
-       "222984  ws-enduser   CONUS  r50.0_tile9  2020  srf_202012.tif  17263691\n",
+       "232652  ws-enduser   CONUS  r50.0_tile9  2020  srf_202008.tif   1295984\n",
+       "232653  ws-enduser   CONUS  r50.0_tile9  2020  srf_202009.tif   1108483\n",
+       "232654  ws-enduser   CONUS  r50.0_tile9  2020  srf_202010.tif  10106845\n",
+       "232655  ws-enduser   CONUS  r50.0_tile9  2020  srf_202011.tif  16757676\n",
+       "232656  ws-enduser   CONUS  r50.0_tile9  2020  srf_202012.tif  17263691\n",
        "\n",
-       "[222985 rows x 6 columns]"
+       "[232657 rows x 6 columns]"
       ]
      },
      "execution_count": 10,
@@ -798,53 +808,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34760</th>\n",
+       "      <th>38572</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r37.0_tile0</td>\n",
        "      <td>2020</td>\n",
-       "      <td>srf_2020089.tif</td>\n",
-       "      <td>1707382</td>\n",
+       "      <td>srf_2020287.tif</td>\n",
+       "      <td>826960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34761</th>\n",
+       "      <th>38573</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r37.0_tile0</td>\n",
        "      <td>2020</td>\n",
-       "      <td>srf_202009.tif</td>\n",
-       "      <td>839751</td>\n",
+       "      <td>srf_2020288.tif</td>\n",
+       "      <td>826960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34762</th>\n",
+       "      <th>38574</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r37.0_tile0</td>\n",
        "      <td>2020</td>\n",
-       "      <td>srf_202010.tif</td>\n",
-       "      <td>826999</td>\n",
+       "      <td>srf_2020289.tif</td>\n",
+       "      <td>826960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34763</th>\n",
+       "      <th>38575</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r37.0_tile0</td>\n",
        "      <td>2020</td>\n",
-       "      <td>srf_202011.tif</td>\n",
-       "      <td>842814</td>\n",
+       "      <td>srf_2020290.tif</td>\n",
+       "      <td>826960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34764</th>\n",
+       "      <th>38576</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r37.0_tile0</td>\n",
        "      <td>2020</td>\n",
-       "      <td>srf_202012.tif</td>\n",
-       "      <td>888443</td>\n",
+       "      <td>srf_2020291.tif</td>\n",
+       "      <td>826960</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>34765 rows × 6 columns</p>\n",
+       "<p>38577 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -855,13 +865,13 @@
        "3      ws-enduser   CONUS  r37.0_tile0  1999    dd_199904.tif   7873466\n",
        "4      ws-enduser   CONUS  r37.0_tile0  1999    dd_199905.tif   2429679\n",
        "...           ...     ...          ...   ...              ...       ...\n",
-       "34760  ws-enduser   CONUS  r37.0_tile0  2020  srf_2020089.tif   1707382\n",
-       "34761  ws-enduser   CONUS  r37.0_tile0  2020   srf_202009.tif    839751\n",
-       "34762  ws-enduser   CONUS  r37.0_tile0  2020   srf_202010.tif    826999\n",
-       "34763  ws-enduser   CONUS  r37.0_tile0  2020   srf_202011.tif    842814\n",
-       "34764  ws-enduser   CONUS  r37.0_tile0  2020   srf_202012.tif    888443\n",
+       "38572  ws-enduser   CONUS  r37.0_tile0  2020  srf_2020287.tif    826960\n",
+       "38573  ws-enduser   CONUS  r37.0_tile0  2020  srf_2020288.tif    826960\n",
+       "38574  ws-enduser   CONUS  r37.0_tile0  2020  srf_2020289.tif    826960\n",
+       "38575  ws-enduser   CONUS  r37.0_tile0  2020  srf_2020290.tif    826960\n",
+       "38576  ws-enduser   CONUS  r37.0_tile0  2020  srf_2020291.tif    826960\n",
        "\n",
-       "[34765 rows x 6 columns]"
+       "[38577 rows x 6 columns]"
       ]
      },
      "execution_count": 14,
@@ -906,15 +916,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>3.476500e+04</td>\n",
+       "      <td>3.857700e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>5.233470e+07</td>\n",
+       "      <td>4.759130e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>3.151742e+07</td>\n",
+       "      <td>3.344692e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -922,15 +932,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>8.832906e+06</td>\n",
+       "      <td>1.947822e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>7.388930e+07</td>\n",
+       "      <td>7.369444e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>7.448758e+07</td>\n",
+       "      <td>7.438502e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -942,13 +952,13 @@
       ],
       "text/plain": [
        "               size\n",
-       "count  3.476500e+04\n",
-       "mean   5.233470e+07\n",
-       "std    3.151742e+07\n",
+       "count  3.857700e+04\n",
+       "mean   4.759130e+07\n",
+       "std    3.344692e+07\n",
        "min    8.269600e+05\n",
-       "25%    8.832906e+06\n",
-       "50%    7.388930e+07\n",
-       "75%    7.448758e+07\n",
+       "25%    1.947822e+06\n",
+       "50%    7.369444e+07\n",
+       "75%    7.438502e+07\n",
        "max    7.681894e+07"
       ]
      },
