Auto git update December 2021 - tony

--- a/Validate/2_daily_validate_mosaic.ipynb
+++ b/Validate/2_daily_validate_mosaic.ipynb
@@ -560,11 +560,14 @@
       "s3.Bucket(name='ws-enduser') bucket object count =  359000\n",
       "s3.Bucket(name='ws-enduser') bucket object count =  360000\n",
       "s3.Bucket(name='ws-enduser') bucket object count =  361000\n",
-      "COUNT= 361155\n",
-      "STANDARD 361155\n",
-      "STANDARD 34624491743242\n",
-      "STANDARD GBYTES= 32246.570795068517\n",
-      "STANDARD Cost/Month= 741.6711282865759\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  362000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  363000\n",
+      "s3.Bucket(name='ws-enduser') bucket object count =  364000\n",
+      "COUNT= 364194\n",
+      "STANDARD 364194\n",
+      "STANDARD 34920567486764\n",
+      "STANDARD GBYTES= 32522.31281880662\n",
+      "STANDARD Cost/Month= 748.0131948325522\n",
       "----------------------------------------------------------------------------------------------------\n",
       "GLACIER 0\n",
       "GLACIER 0\n",
@@ -577,7 +580,7 @@
       "INTELLIGENT_TIERING Cost/Month= 0.0\n",
       "----------------------------------------------------------------------------------------------------\n",
       "END LOOP\n",
-      "G: 32246.570795068517 741.6711282865759\n"
+      "G: 32522.31281880662 748.0131948325522\n"
      ]
     }
    ],
@@ -737,7 +740,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361150</th>\n",
+       "      <th>364189</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -746,7 +749,7 @@
        "      <td>928451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361151</th>\n",
+       "      <th>364190</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -755,7 +758,7 @@
        "      <td>2375655</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361152</th>\n",
+       "      <th>364191</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -764,7 +767,7 @@
        "      <td>928451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361153</th>\n",
+       "      <th>364192</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -773,7 +776,7 @@
        "      <td>938905</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361154</th>\n",
+       "      <th>364193</th>\n",
        "      <td>ws-enduser</td>\n",
        "      <td>CONUS</td>\n",
        "      <td>r50.0_tile9</td>\n",
@@ -783,7 +786,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>361155 rows × 6 columns</p>\n",
+       "<p>364194 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -794,13 +797,13 @@
        "3       ws-enduser   CONUS    conus_mos  2000  etasw_200004.tif  1646139536\n",
        "4       ws-enduser   CONUS    conus_mos  2000  etasw_200005.tif  1652544513\n",
        "...            ...     ...          ...   ...               ...         ...\n",
-       "361150  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020362.tif      928451\n",
-       "361151  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020363.tif     2375655\n",
-       "361152  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020364.tif      928451\n",
-       "361153  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020365.tif      938905\n",
-       "361154  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020366.tif      938799\n",
+       "364189  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020362.tif      928451\n",
+       "364190  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020363.tif     2375655\n",
+       "364191  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020364.tif      928451\n",
+       "364192  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020365.tif      938905\n",
+       "364193  ws-enduser   CONUS  r50.0_tile9  2020   srf_2020366.tif      938799\n",
        "\n",
-       "[361155 rows x 6 columns]"
+       "[364194 rows x 6 columns]"
       ]
      },
      "execution_count": 10,
@@ -1472,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "10258d70",
    "metadata": {},
    "outputs": [],
@@ -1511,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "573a5b30",
    "metadata": {},
    "outputs": [
@@ -1523,7 +1526,7 @@
        "       'r50.0_tile8', 'r50.0_tile9'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "a29c2b10",
    "metadata": {
     "scrolled": true
@@ -1546,30 +1549,26 @@
      "text": [
       "r37.0_tile0: work remaining: 0\n",
       "r37.0_tile1: work remaining: 0\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'srf', 'year': 2016, 'completed:': 140}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2000, 'completed:': 254}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2005, 'completed:': 261}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2011, 'completed:': 138}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2015, 'completed:': 95}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2016, 'completed:': 91}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2019, 'completed:': 80}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2020, 'completed:': 84}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2000, 'completed:': 78}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2001, 'completed:': 75}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2002, 'completed:': 71}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2004, 'completed:': 311}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2007, 'completed:': 11}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2008, 'completed:': 65}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2009, 'completed:': 59}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2010, 'completed:': 12}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2012, 'completed:': 328}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2015, 'completed:': 60}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2016, 'completed:': 57}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2017, 'completed:': 59}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2019, 'completed:': 345}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2020, 'completed:': 340}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'srf', 'year': 2016, 'completed:': 243}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2000, 'completed:': 356}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2005, 'completed:': 363}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2011, 'completed:': 239}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2015, 'completed:': 196}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2016, 'completed:': 192}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2019, 'completed:': 182}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'dd', 'year': 2020, 'completed:': 185}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2000, 'completed:': 178}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2001, 'completed:': 175}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2002, 'completed:': 171}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2007, 'completed:': 111}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2008, 'completed:': 165}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2009, 'completed:': 87}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2010, 'completed:': 112}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2015, 'completed:': 144}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2016, 'completed:': 135}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2017, 'completed:': 130}\n",
+      "{'tile': 'r37.0_tile2', 'variable': 'netet', 'year': 2020, 'completed:': 360}\n",
       "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2000, 'completed:': 126}\n",
-      "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2001, 'completed:': 360}\n",
       "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2002, 'completed:': 7}\n",
       "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2003, 'completed:': 49}\n",
       "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2004, 'completed:': 49}\n",
@@ -1589,38 +1588,27 @@
       "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2018, 'completed:': 32}\n",
       "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2019, 'completed:': 13}\n",
       "{'tile': 'r37.0_tile2', 'variable': 'etc', 'year': 2020, 'completed:': 9}\n",
-      "r37.0_tile2: work remaining: 11636\n",
-      "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2007, 'completed:': 138}\n",
-      "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2009, 'completed:': 138}\n",
-      "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2010, 'completed:': 10}\n",
+      "r37.0_tile2: work remaining: 9826\n",
+      "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2007, 'completed:': 223}\n",
+      "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2009, 'completed:': 222}\n",
+      "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2010, 'completed:': 94}\n",
       "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2013, 'completed:': 298}\n",
       "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2016, 'completed:': 304}\n",
       "{'tile': 'r37.0_tile3', 'variable': 'dd', 'year': 2020, 'completed:': 299}\n",
       "{'tile': 'r37.0_tile3', 'variable': 'netet', 'year': 2001, 'completed:': 197}\n",
       "{'tile': 'r37.0_tile3', 'variable': 'netet', 'year': 2007, 'completed:': 226}\n",
       "{'tile': 'r37.0_tile3', 'variable': 'etc', 'year': 2002, 'completed:': 129}\n",
-      "r37.0_tile3: work remaining: 1546\n",
+      "r37.0_tile3: work remaining: 1293\n",
       "r50.0_tile5: work remaining: 0\n",
       "r50.0_tile6: work remaining: 0\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2003, 'completed:': 358}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2004, 'completed:': 357}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2005, 'completed:': 356}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2006, 'completed:': 356}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2007, 'completed:': 355}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2008, 'completed:': 356}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2009, 'completed:': 356}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2010, 'completed:': 356}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2011, 'completed:': 355}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2012, 'completed:': 51}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2013, 'completed:': 356}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2014, 'completed:': 355}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2015, 'completed:': 303}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2016, 'completed:': 304}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2017, 'completed:': 297}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2018, 'completed:': 289}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2019, 'completed:': 236}\n",
-      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2020, 'completed:': 203}\n",
-      "r50.0_tile7: work remaining: 971\n",
+      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2012, 'completed:': 112}\n",
+      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2015, 'completed:': 342}\n",
+      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2016, 'completed:': 340}\n",
+      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2017, 'completed:': 333}\n",
+      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2018, 'completed:': 323}\n",
+      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2019, 'completed:': 257}\n",
+      "{'tile': 'r50.0_tile7', 'variable': 'etc', 'year': 2020, 'completed:': 213}\n",
+      "r50.0_tile7: work remaining: 635\n",
       "r50.0_tile8: work remaining: 0\n",
       "r50.0_tile9: work remaining: 0\n"
      ]
@@ -1645,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "b10fb780",
    "metadata": {},
    "outputs": [
@@ -1654,16 +1642,16 @@
       "text/plain": [
        "['r37.0_tile0: work remaining: 0',\n",
        " 'r37.0_tile1: work remaining: 0',\n",
-       " 'r37.0_tile2: work remaining: 11636',\n",
-       " 'r37.0_tile3: work remaining: 1546',\n",
+       " 'r37.0_tile2: work remaining: 9826',\n",
+       " 'r37.0_tile3: work remaining: 1293',\n",
        " 'r50.0_tile5: work remaining: 0',\n",
        " 'r50.0_tile6: work remaining: 0',\n",
-       " 'r50.0_tile7: work remaining: 971',\n",
+       " 'r50.0_tile7: work remaining: 635',\n",
        " 'r50.0_tile8: work remaining: 0',\n",
        " 'r50.0_tile9: work remaining: 0']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1675,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15ffd98",
+   "id": "909fd38f",
    "metadata": {},
    "outputs": [],
    "source": []
